{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 38,
  "lineage": "339c9889-0f65-16b4-0e0a-14f17595bcb6",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c94855ba95c71c99",
            "arn": "arn:aws:ec2:us-east-1:881490125496:instance/i-028c6d2bbf9a5944b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-028c6d2bbf9a5944b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jogetapp-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-063a085a4f5c96be7",
            "private_dns": "ip-10-0-0-232.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.232",
            "public_dns": "ec2-98-84-143-37.compute-1.amazonaws.com",
            "public_ip": "98.84.143.37",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ca6ed1f24c10f839",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00263d6acac29515a",
            "tags": {
              "Name": "hybrid-app-app-0"
            },
            "tags_all": {
              "Name": "hybrid-app-app-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0927c0171168394a3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.ec2_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c94855ba95c71c99",
            "arn": "arn:aws:ec2:us-east-1:881490125496:instance/i-0b3b6a467c73e8fb7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b3b6a467c73e8fb7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jogetapp-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0240d695985db8425",
            "private_dns": "ip-10-0-1-63.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.63",
            "public_dns": "ec2-98-83-162-148.compute-1.amazonaws.com",
            "public_ip": "98.83.162.148",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-047807bf62bde8b87",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00fcba14148ceca9c",
            "tags": {
              "Name": "hybrid-app-app-1"
            },
            "tags_all": {
              "Name": "hybrid-app-app-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0927c0171168394a3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:881490125496:loadbalancer/app/hybrid-app-alb/d0de5118568c76fc",
            "arn_suffix": "app/hybrid-app-alb/d0de5118568c76fc",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "hybrid-app-alb-1416942598.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:881490125496:loadbalancer/app/hybrid-app-alb/d0de5118568c76fc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hybrid-app-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-05d790c5ad02a05e7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00263d6acac29515a"
              },
              {
                "subnet_id": "subnet-00fcba14148ceca9c"
              }
            ],
            "subnets": [
              "subnet-00263d6acac29515a",
              "subnet-00fcba14148ceca9c"
            ],
            "tags": {
              "Name": "hybrid-app-alb"
            },
            "tags_all": {
              "Name": "hybrid-app-alb"
            },
            "vpc_id": "vpc-047eb1ff54006ef1e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:881490125496:loadbalancer/app/hybrid-app-alb/d0de5118568c76fc"
          },
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:881490125496:listener/app/hybrid-app-alb/d0de5118568c76fc/59c574f688203d32",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:881490125496:targetgroup/hybrid-app-tg/ca7b5e306365517c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:881490125496:listener/app/hybrid-app-alb/d0de5118568c76fc/59c574f688203d32",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:881490125496:loadbalancer/app/hybrid-app-alb/d0de5118568c76fc",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:881490125496:listener/app/hybrid-app-alb/d0de5118568c76fc/59c574f688203d32"
          },
          "dependencies": [
            "module.compute.aws_lb.app_alb",
            "module.compute.aws_lb_target_group.tg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:881490125496:targetgroup/hybrid-app-tg/ca7b5e306365517c",
            "arn_suffix": "targetgroup/hybrid-app-tg/ca7b5e306365517c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:881490125496:targetgroup/hybrid-app-tg/ca7b5e306365517c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:881490125496:loadbalancer/app/hybrid-app-alb/d0de5118568c76fc"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "hybrid-app-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-047eb1ff54006ef1e"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:881490125496:targetgroup/hybrid-app-tg/ca7b5e306365517c"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachments",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:881490125496:targetgroup/hybrid-app-tg/ca7b5e306365517c-20250802055526602100000004",
            "port": 8080,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:881490125496:targetgroup/hybrid-app-tg/ca7b5e306365517c",
            "target_id": "i-028c6d2bbf9a5944b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_instance.app",
            "module.compute.aws_lb_target_group.tg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.ec2_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:881490125496:targetgroup/hybrid-app-tg/ca7b5e306365517c-20250802055526530800000003",
            "port": 8080,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:881490125496:targetgroup/hybrid-app-tg/ca7b5e306365517c",
            "target_id": "i-0b3b6a467c73e8fb7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_instance.app",
            "module.compute.aws_lb_target_group.tg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881490125496:security-group/sg-04927c17af331aa41",
            "description": "Allow MySQL traffic from EC2 app servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04927c17af331aa41",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0927c0171168394a3"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "hybrid-app-rds-sg",
            "name_prefix": "",
            "owner_id": "881490125496",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hybrid-app-rds-sg"
            },
            "tags_all": {
              "Name": "hybrid-app-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-047eb1ff54006ef1e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014d00dfe45c2fabb",
            "arn": "arn:aws:ec2:us-east-1:881490125496:elastic-ip/eipalloc-014d00dfe45c2fabb",
            "association_id": "eipassoc-06da1571895b77133",
            "domain": "vpc",
            "id": "eipalloc-014d00dfe45c2fabb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0aabfe37f4c5ca0ed",
            "private_dns": "ip-10-0-0-231.ec2.internal",
            "private_ip": "10.0.0.231",
            "public_dns": "ec2-52-1-157-99.compute-1.amazonaws.com",
            "public_ip": "52.1.157.99",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881490125496:internet-gateway/igw-0588507da0b129793",
            "id": "igw-0588507da0b129793",
            "owner_id": "881490125496",
            "region": "us-east-1",
            "tags": {
              "Name": "hybrid-app-igw"
            },
            "tags_all": {
              "Name": "hybrid-app-igw"
            },
            "vpc_id": "vpc-047eb1ff54006ef1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014d00dfe45c2fabb",
            "association_id": "eipassoc-06da1571895b77133",
            "connectivity_type": "public",
            "id": "nat-06a67eacfd84f041f",
            "network_interface_id": "eni-0aabfe37f4c5ca0ed",
            "private_ip": "10.0.0.231",
            "public_ip": "52.1.157.99",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00263d6acac29515a",
            "tags": {
              "Name": "hybrid-app-nat"
            },
            "tags_all": {
              "Name": "hybrid-app-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881490125496:route-table/rtb-0796869cb122d1ed4",
            "id": "rtb-0796869cb122d1ed4",
            "owner_id": "881490125496",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06a67eacfd84f041f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hybrid-app-private-rt"
            },
            "tags_all": {
              "Name": "hybrid-app-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-047eb1ff54006ef1e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881490125496:route-table/rtb-05d66175a71bedf87",
            "id": "rtb-05d66175a71bedf87",
            "owner_id": "881490125496",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0588507da0b129793",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hybrid-app-public-rt"
            },
            "tags_all": {
              "Name": "hybrid-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-047eb1ff54006ef1e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6330767bacdb15a",
            "region": "us-east-1",
            "route_table_id": "rtb-0796869cb122d1ed4",
            "subnet_id": "subnet-07e6ff43258b0754e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5ad3f4e7abf14b7",
            "region": "us-east-1",
            "route_table_id": "rtb-0796869cb122d1ed4",
            "subnet_id": "subnet-0d669d461d9177cae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0720f6cc3de30e624",
            "region": "us-east-1",
            "route_table_id": "rtb-05d66175a71bedf87",
            "subnet_id": "subnet-00263d6acac29515a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0375141664ce3fdd0",
            "region": "us-east-1",
            "route_table_id": "rtb-05d66175a71bedf87",
            "subnet_id": "subnet-00fcba14148ceca9c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881490125496:subnet/subnet-07e6ff43258b0754e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e6ff43258b0754e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "881490125496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hybrid-app-private-0"
            },
            "tags_all": {
              "Name": "hybrid-app-private-0"
            },
            "vpc_id": "vpc-047eb1ff54006ef1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881490125496:subnet/subnet-0d669d461d9177cae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d669d461d9177cae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "881490125496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hybrid-app-private-1"
            },
            "tags_all": {
              "Name": "hybrid-app-private-1"
            },
            "vpc_id": "vpc-047eb1ff54006ef1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881490125496:subnet/subnet-00263d6acac29515a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00263d6acac29515a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "881490125496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hybrid-app-public-0"
            },
            "tags_all": {
              "Name": "hybrid-app-public-0"
            },
            "vpc_id": "vpc-047eb1ff54006ef1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881490125496:subnet/subnet-00fcba14148ceca9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fcba14148ceca9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "881490125496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hybrid-app-public-1"
            },
            "tags_all": {
              "Name": "hybrid-app-public-1"
            },
            "vpc_id": "vpc-047eb1ff54006ef1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881490125496:vpc/vpc-047eb1ff54006ef1e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0239dab48ff3d627a",
            "default_route_table_id": "rtb-0366e4a261a4715b0",
            "default_security_group_id": "sg-071f9fc2fa9ded5ef",
            "dhcp_options_id": "dopt-05bda777fa0974778",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-047eb1ff54006ef1e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0366e4a261a4715b0",
            "owner_id": "881490125496",
            "region": "us-east-1",
            "tags": {
              "Name": "hybrid-app-vpc"
            },
            "tags_all": {
              "Name": "hybrid-app-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881490125496:security-group/sg-05d790c5ad02a05e7",
            "description": "Allow HTTP to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d790c5ad02a05e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hybrid-app-alb-sg",
            "name_prefix": "",
            "owner_id": "881490125496",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hybrid-app-alb-sg"
            },
            "tags_all": {
              "Name": "hybrid-app-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-047eb1ff54006ef1e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881490125496:security-group/sg-0927c0171168394a3",
            "description": "Allow 8080 from ALB and SSH from admin IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0927c0171168394a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05d790c5ad02a05e7"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "hybrid-app-ec2-sg",
            "name_prefix": "",
            "owner_id": "881490125496",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hybrid-app-ec2-sg"
            },
            "tags_all": {
              "Name": "hybrid-app-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-047eb1ff54006ef1e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    }
  ]
}